--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         </section>
         <section id="contact">
             <h2 id="contact-heading">Contact</h2>
-            <form id="contact-form" action="connect.php" method="POST">
+            <form id="contact-form" action="connect.php" method="post">
                 <input type="text" name="name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
                 <textarea name="message" placeholder="Your Message" required></textarea>
